Correct team member title wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,9 @@ body {
   justify-content: flex-end;
 }
 .team-member__image-wrapper {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: flex-start;
 }
 .team-member__image {
   max-width: 140px;
@@ -106,24 +109,28 @@ body {
 /* END Footer */
 
 /* Media Queries */
-@media (min-width: 850px) {
+@media (min-width: 576px) {
   .container {
     max-width: 932px;
   }
   .header {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 2em;
   }
   .main {
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-rows: 430px;
     margin-bottom: 6em;
   }
+
   .team-member:nth-child(2n) {
     justify-content: flex-start;
   }
   .team-member:nth-child(3n + 2) {
     justify-content: flex-end;
+  }
+  .team-member__image-wrapper {
   }
   .team-member__image {
     max-width: 238px;
